tests/baselines/reference/PrivateAccessInSubclass1.errors.txt
==== tests/cases/compiler/privateAccessInSubclass1.ts (1 errors) ====
    class Base {
      private options: any;
    }
    
    class D extends Base {
      myMethod() {
        this.options;
             ~~~~~~~
!!! error TS2107: 'Base.options' is inaccessible.
      }
    }